<resources>
    <string name="app_name"><b>Laure</b>App</string>
    <string name="content_description_notification">Show notifications</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="register">Register</string>
    <string name="welcome">"Welcome! "</string>
    <string name="login_failed">"Login failed"</string>
    <string name="registration_failed">"Registration failed"</string>
    <string name="login">Login</string>
    <string name="guest">Guest</string>
    <string name="sign_up">Sign up</string>
    <string name="login_guest"><u>Enter as guest</u></string>
    <string name="favorite">Favourites</string>
    <string name="content_description_favorite">Add to favourites</string>
    <string name="search">Search</string>
    <string name="content_description_search">Search request</string>
    <string name="confirm">Confirm</string>
    <string name="send">Send</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="unknown_user">Unknown user</string>
    <string name="yes_text">Yes</string>
    <string name="no_text">No</string>
    <string name="title">Title</string>
    <string name="edit">Edit</string>
    <string name="allow">Allow</string>
    <string name="next">Continue</string>
    <string name="ok" translatable="false">OK</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="request_confirm_email_verified_title"><b>Confirm your email address</b></string>
    <string name="request_confirm_email_verified">We sent a confirmation email to:\n\n<b>%s</b>\n\nCheck your email and click on the confirmation link to continue.</string>
    <string name="resend_email"><b>Resend email</b></string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="birth_day">Date of birth</string>
    <string name="bio">Biography</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="bioHint">Enter a description (maximum 200 characters)</string>
    <string name="role_student">Student</string>
    <string name="role_professor">Professor</string>
    <string name="forgot_password"><u>Forgot password?</u></string>
    <string name="nometask">Task Name</string>
    <string name="stato">Sate</string>
    <string name="descrizione">Description</string>
    <string name="scadenza">Deadline</string>
    <string name="lista_task">Task List</string>
    <string name="share_classifica">Share ranking</string>
    <string name="share_tesi">Share thesis</string>
    <string name="invalid_username">Not a valid email</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="invalid_name">Not a valid name</string>
    <string name="invalid_surname">Not a valid surname</string>
    <string name="invalid_date">Not a valid date of birth</string>
    <string name="invalid_bio">Biography must contain a maximum of 200 characters</string>
    <string name="invalid_confirm_password">Passwords do not match</string>
    <string name="invalid_filename">The file name may not contain special characters</string>
    <string name="invalid_state">Not a valid state</string>
    <string name="invalid_taskname">Not a valid name for a task</string>
    <string name="invalid_task">Not a valid task</string>
    <string name="invalid_description">Description must contain a maximum of 200 characters</string>
    <string name="invalid_scadenza">Not a valid end date</string>
    <string name="weak_password">Your password is too weak</string>
    <string name="invalid_credentials">Your email is invalid or already in use</string>
    <string name="user_collision">User is already registered with this email</string>
    <string name="nome_tesi">THESIS NAME</string>
    <string name="relatori">RELATORS</string>
    <string name="vincoli">CONSTRAINTS</string>
    <string name="crea_tesi">Create thesis</string>
    <string name="popvincoli">Constraints</string>
    <string name="edit_search_keys">Edit search keys</string>
    <string name="edit_documents">Edit documents</string>
    <string name="edit_constraints">Edit constraints</string>
    <string name="edit_notes">Edit notes</string>
    <string name="cancella">CANCEL</string>
    <string name="aggiungi">ADD</string>
    <string name="email">Email</string>
    <string name="cognome">SURNAME</string>
    <string name="nome">NAME</string>
    <string name="vedi_tutte">See all</string>
    <string name="task_creati">TASKS CREATED</string>
    <string name="verifica_email">VERIFY EMAIL</string>
    <string name="new_task">New Task</string>
    <string name="classifica_tesi">Thesis Ranking</string>
    <string name="lista_tesi">Thesis List</string>
    <string name="title_activity_new_task">New Task</string>
    <string name="menu_home">Home</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="request_send_forgot_password">Are you sure you want to send a password reset request to this e-mail address:\n\n<b>%s</b></string>
    <string name="password_reset_sent">Password reset email sent</string>
    <string name="dialog_password_reset_title">Confirm reset password</string>
    <string name="error_message_password_reset">Unable send password reset request</string>
    <string name="logout">Logout</string>
    <string name="menu_gallery">Gallery</string>
    <string name="chat_menu">Chat</string>
    <string name="ticket_menu">Ticket</string>
    <string name="title_home">Home</string>
    <string name="title_thesis_list">Thesis list</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_chat">Chat</string>
    <string name="user_profile">User profile</string>
    <string name="title_tickets">Tickets List</string>
    <string name="title_ticket">Ticket</string>
    <string name="title_message">New message from %s</string>
    <string name="title_messages">New messages in chat %s</string>
    <string name="body_messages">You have received more messages in the chat %s</string>
    <string name="no_notifications">There are no notifications</string>
    <string name="title_notification_ticket">Ticket on %s</string>
    <string name="notification_body_open_ticket">%s opened a new ticket on %s</string>
    <string name="notification_body_closed_ticket">%s closed a ticket on %s</string>
    <string name="notification_ticket_request_exception">Unable to send request</string>
    <string name="notification_ticket_response_exception">Unable to send response</string>
    <string name="notification_title_booking">Booking on %s</string>
    <string name="notification_body_open_booking">Student %s made a booking to the thesis %s</string>
    <string name="no_tickets">There are no tickets</string>
    <string name="closed_tickets">Closed</string>
    <string name="open_tickets">Open</string>
    <string name="title_dialog_ticket">Confirm Ticket</string>
    <string name="message_dialog_ticket_request">Are you sure you want to send this request?</string>
    <string name="message_dialog_ticket_response">Are you sure you want to send this response?</string>
    <string name="email_student_title">Student: %s</string>
    <string name="email_prof_title">Professor: %s</string>
    <string name="hint_text_sender">Write your request here…</string>
    <string name="hint_text_receiver">Write your response here…</string>
    <string name="notification_icon">notification icon</string>
    <string name="content_description_share">Click to share</string>
    <string name="content_description_qr_code">Generate QR code</string>
    <string name="content_description_favorite_thesis">Add thesis to ranking</string>
    <string name="content_description_add_ticket_thesis">Click to create a new ticket</string>
    <string name="share">Share</string>
    <string name="qr_code">QR Code</string>
    <string name="add_ticket">Add ticket</string>
    <string name="relators">Relators</string>
    <string name="constraints">Constraints</string>
    <string name="book_thesis_uppercase">BOOK THESIS</string>
    <string name="book_thesis">Book thesis</string>
    <string name="documents">Documents</string>
    <string name="notes">Notes</string>
    <string name="no_notes">There are no notes</string>
    <string name="unable_to_save_changes">Unable to save changes</string>
    <string name="share_data_with">Share thesis data via:</string>
    <string name="filename">Filename</string>
    <string name="file_saved_with_success">File saved successfully</string>
    <string name="unable_saved_file">Unable to save the file</string>
    <string name="file_saved_unauthorised">Permissions to save files not enabled</string>
    <string name="unable_downloaded_file">Unable downloaded file</string>
    <string name="unable_open_file">Unable to open file</string>
    <string name="upload">Upload</string>
    <string name="image_saved_in_gallery">Image saved in gallery</string>
    <string name="cannot_image_saved_in_gallery">Cannot saved image in gallery</string>
    <string name="error_upload">An error occurred during the upload</string>
    <string name="internet_permission_required_cause">Internet permission is required to open web links</string>
    <string name="write_external_permission_declined">Write external storage permission declined</string>
    <string name="app_need_permission_to_save_qr_code">The app needs permission to save the QR code image</string>
    <string name="request_permission_storage_gallery">This app needs access to the external storage to save images to the gallery. If you decline this permission, the app will not be able to save images to the gallery.</string>
    <string name="storage_permission">Storage permission</string>
    <string name="timelines">Timelines</string>
    <string name="average_votes">Grade point average</string>
    <string name="necessary_exams">Necessary exams</string>
    <string name="skills_and_competences">Skills and competences</string>
    <string name="booking">Booking</string>
    <string name="write_here_your_motivation">Write here your motivation…</string>
    <string name="motivation_for_unfulfilled_constraints">Motivation for unfulfilled constraints</string>
    <string name="constraints_checks_the_constraints_satisfied">Checks the constraints satisfied</string>
    <string name="booking_successfully_saved">Booking successfully saved</string>
    <string name="meeting_successfully_saved">Meeting successfully saved</string>
    <string name="impossible_to_save_the_booking">Impossible to save the booking</string>
    <string name="refused">Refused</string>
    <string name="accepted">Accepted</string>
    <string name="booking_list">Booking list</string>
    <string name="menu_booking">Booking</string>
    <string name="meetings">Meetings</string>
    <string name="list_task">Task list</string>
    <string name="calendar">Calendar</string>
    <string name="click_to_list_task">Click to view list of tasks</string>
    <string name="chat_list">Chat list</string>
    <string name="filters">Filters</string>
    <string name="settings">Settings</string>
    <string name="profile">Profile</string>
    <string name="edit_profile_label">Edit Profile</string>
    <string name="edit_password">Edit Password</string>
    <string name="old_password">Current password</string>
    <string name="new_password">New password</string>
</resources>