<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/list_task"
        android:contentDescription="@string/click_to_list_task"
        android:icon="@drawable/ic_baseline_playlist_play_24"
        android:title="@string/list_task"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/share_thesis"
        android:contentDescription="@string/content_description_share"
        android:icon="@drawable/ic_baseline_share_24"
        android:title="@string/share"
        android:iconTint="?attr/iconTint"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/qr_thesis"
        android:contentDescription="@string/content_description_qr_code"
        android:icon="@drawable/ic_baseline_qr_code_2_24"
        android:title="@string/qr_code"
        android:iconTint="?attr/iconTint"
        app:showAsAction="ifRoom" />
</menu>