<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_lista_task"
            android:icon="@drawable/ic_baseline_playlist_play_24"
            android:title="@string/lista_task" />
        <item
            android:id="@+id/nav_classifica_tesi"
            android:icon="@drawable/ic_favorite_24dp"
            android:title="@string/classifica_tesi" />
        <item
            android:id="@+id/nav_chat"
            android:icon="@drawable/ic_baseline_chat_24dp"
            android:title="@string/chat_menu" />
        <item
            android:id="@+id/nav_ticket"
            android:icon="@drawable/ic_baseline_report_24dp"
            android:title="@string/ticket_menu" />
        <item
            android:id="@+id/nav_booking"
            android:icon="@drawable/ic_baseline_book_online_24"
            android:title="@string/menu_booking"
            android:iconTint="?attr/iconTint"/>
        <item
            android:id="@+id/nav_meeting"
            android:icon="@drawable/ic_baseline_chat_24dp"
            android:title="@string/meetings" />
        <item
            android:id="@+id/logout"
            android:icon="@drawable/ic_logout_24"
            android:title="@string/logout" />
    </group>
</menu>