<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/favorite"
        android:contentDescription="@string/content_description_favorite"
        android:icon="@drawable/ic_favorite_24dp"
        android:title="@string/favorite"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/notification_app_bar"
        android:contentDescription="@string/content_description_notification"
        android:icon="@drawable/ic_notifications_black_24dp"
        app:actionLayout="@layout/notification_action_item_layout"
        android:title="@string/title_notifications"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/crea"
        android:contentDescription="@string/crea_tesi"
        android:icon="@drawable/ic_baseline_post_add_24"
        android:title="@string/crea_tesi"
        app:showAsAction="ifRoom" />

</menu>