<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/logo_fragment">

    <fragment
        android:id="@+id/navigation_home"
        android:name="it.uniba.dib.sms222327.laureapp.ui.home.HomeFragment"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_navigation_home_to_navigation_notifications"
            app:destination="@id/navigation_notifications" />
        <action
            android:id="@+id/action_navigation_home_to_tesiFragmant"
            app:destination="@id/tesiFragmant" />
        <action
            android:id="@+id/action_navigation_home_to_visualizeTesiFragment"
            app:destination="@id/visualizeTesiFragment" />
        <action
            android:id="@+id/action_navigation_home_to_calendario"
            app:destination="@id/calendario" />
    </fragment>
    <fragment
        android:id="@+id/navigation_notifications"
        android:name="it.uniba.dib.sms222327.laureapp.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" >
        <action
            android:id="@+id/action_navigation_notifications_to_chatFragment"
            app:destination="@id/chatFragment" />
        <action
            android:id="@+id/action_navigation_notifications_to_ticketFragment"
            app:destination="@id/ticketFragment" />
        <action
            android:id="@+id/action_navigation_notifications_to_bookingFragment"
            app:destination="@id/bookingFragment" />
        <action
            android:id="@+id/action_navigation_notifications_to_calendario"
            app:destination="@id/calendario" />
    </fragment>
    <fragment
        android:id="@+id/tesiFragmant"
        android:name="it.uniba.dib.sms222327.laureapp.ui.tesi.CreaTesiFragment"
        android:label="@string/crea_tesi"
        tools:layout="@layout/fragment_tesi" />
    <fragment
        android:id="@+id/nav_new_task"
        android:name="it.uniba.dib.sms222327.laureapp.ui.task.NewTaskFragment"
        android:label="@string/new_task"
        tools:layout="@layout/fragment_new_task" />
    <fragment
        android:id="@+id/nav_lista_task"
        android:name="it.uniba.dib.sms222327.laureapp.ui.task.ListaTaskFragment"
        android:label="@string/lista_task" >
        <action
            android:id="@+id/action_nav_lista_task_to_nav_new_task"
            app:destination="@id/nav_new_task" />
    </fragment>
    <fragment
        android:id="@+id/nav_visualizza_task"
        android:name="it.uniba.dib.sms222327.laureapp.ui.task.VisualizzaTask"
        android:label="VisualizzaTask" >
    </fragment>
    <fragment
        android:id="@+id/navigation_lista_tesi"
        android:name="it.uniba.dib.sms222327.laureapp.ui.tesi.ListaTesiFragment"
        android:label="@string/lista_tesi"
        tools:layout="@layout/fragment_lista_tesi" >
        <action
            android:id="@+id/action_navigation_lista_tesi_to_visualizeTesiFragment"
            app:destination="@id/visualizeTesiFragment" />
        <action
            android:id="@+id/action_navigation_lista_tesi_to_tesiFragmant"
            app:destination="@id/tesiFragmant" />
    </fragment>
    <fragment
        android:id="@+id/nav_classifica_tesi"
        android:name="it.uniba.dib.sms222327.laureapp.ui.tesi.ClassificaTesiFragment"
        android:label="@string/classifica_tesi"
        tools:layout="@layout/fragment_classifica_tesi" >
        <action
            android:id="@+id/action_nav_classifica_tesi_to_visualizeTesiFragment"
            app:destination="@id/visualizeTesiFragment" />
    </fragment>
    <fragment
        android:id="@+id/chatFragment"
        android:name="it.uniba.dib.sms222327.laureapp.ui.chat.ChatFragment"
        android:label="@string/title_chat"
        tools:layout="@layout/fragment_chat" />
    <fragment
        android:id="@+id/nav_chat_list_fragment"
        android:name="it.uniba.dib.sms222327.laureapp.ui.chat.ChatListFragment"
        android:label="@string/chat_list" >
        <action
            android:id="@+id/action_chatListFragment_to_chatFragment"
            app:destination="@id/chatFragment" />
    </fragment>
    <fragment
        android:id="@+id/nav_ticket"
        android:name="it.uniba.dib.sms222327.laureapp.ui.ticket.TicketListFragment"
        android:label="@string/title_tickets"
        tools:layout="@layout/fragment_ticket_list" >
        <action
            android:id="@+id/action_nav_ticket_to_ticketFragment"
            app:destination="@id/ticketFragment" />
    </fragment>
    <fragment
        android:id="@+id/ticketFragment"
        android:name="it.uniba.dib.sms222327.laureapp.ui.ticket.TicketFragment"
        android:label="@string/title_ticket"
        tools:layout="@layout/fragment_ticket" />
    <fragment
        android:id="@+id/visualizeTesiFragment"
        android:name="it.uniba.dib.sms222327.laureapp.ui.tesi.VisualizeTesiFragment"
        android:label=""
        tools:layout="@layout/fragment_visualize_tesi" >
        <action
            android:id="@+id/action_visualizeTesiFragment_to_ticketFragment"
            app:destination="@id/ticketFragment" />
        <action
            android:id="@+id/action_visualizeTesiFragment_to_nav_lista_task"
            app:destination="@id/nav_lista_task" />
    </fragment>
    <fragment
        android:id="@+id/nav_bookingListFragment"
        android:name="it.uniba.dib.sms222327.laureapp.ui.bookings.BookingListFragment"
        android:label="@string/booking_list"
        tools:layout="@layout/fragment_booking_list" >
        <action
            android:id="@+id/action_nav_bookingListFragment_to_bookingFragment"
            app:destination="@id/bookingFragment" />
    </fragment>
    <fragment
        android:id="@+id/bookingFragment"
        android:name="it.uniba.dib.sms222327.laureapp.ui.bookings.BookingFragment"
        android:label="@string/booking" />
    <fragment
        android:id="@+id/logo_fragment"
        android:name="it.uniba.dib.sms222327.laureapp.LogoFragment"
        android:label="fragment_logo"
        tools:layout="@layout/fragment_logo" >
        <action
            android:id="@+id/action_logo_fragment_to_navigation_home"
            app:destination="@id/navigation_home"
            app:popUpTo="@id/logo_fragment"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/calendario"
        android:name="it.uniba.dib.sms222327.laureapp.ui.calendario.CalendarioFragment"
        android:label="@string/calendar"
        tools:layout="@layout/fragment_calendario" >
        <action
            android:id="@+id/action_calendario_to_nav_lista_task"
            app:destination="@id/nav_lista_task" />
        <action
            android:id="@+id/action_calendario_self"
            app:destination="@id/calendario" />
    </fragment>
    <fragment
        android:id="@+id/visualizzaRicevimento"
        android:name="it.uniba.dib.sms222327.laureapp.ui.calendario.VisualizzaRicevimentoFragment"
        android:label="@string/meetings"
        tools:layout="@layout/fragment_visualizza_ricevimento" />
    <fragment
        android:id="@+id/fragment_settings"
        android:name="it.uniba.dib.sms222327.laureapp.ui.settings.SettingsFragment"
        android:label="@string/settings" />
    <fragment
        android:id="@+id/navigation_profile"
        android:name="it.uniba.dib.sms222327.laureapp.ui.profile.ProfileFragment"
        android:label="@string/profile" >
        <action
            android:id="@+id/action_navigation_profile_to_editProfileFragment"
            app:destination="@id/editProfileFragment" />
    </fragment>
    <fragment
        android:id="@+id/editProfileFragment"
        android:name="it.uniba.dib.sms222327.laureapp.ui.profile.EditProfileFragment"
        android:label="@string/edit_profile_label"
        tools:layout="@layout/fragment_edit_profile" />
</navigation>