<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:id="@+id/search_tesi"
        android:title="@string/search"
        android:icon="@drawable/ic_search_24dp"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="collapseActionView|ifRoom" />

    <item android:id="@+id/filter_tesi"
        android:title="@string/filters"
        android:icon="@drawable/ic_baseline_filter_list_24"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/crea_tesi"
        android:contentDescription="@string/crea_tesi"
        android:icon="@drawable/ic_baseline_post_add_24"
        android:title="@string/crea_tesi"
        app:showAsAction="ifRoom" />

</menu>